# btag

./: .travis.yml  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  README  README.md
cmake/Modules/: FindIconv.cmake  FindLibCue.cmake  FindLibEdit.cmake  FindTagLib.cmake
man/: btag.1  btag.1.roff  qtagger.1.roff
src/: BasicStringFilter.cpp  BasicStringFilter.h  CapitalizationFilter.h  ConfirmationHandler.cpp  ConfirmationHandler.h  ConservativeRenamingFilter.h  CueReader.cpp  CueReader.h  CueReaderMultiplexer.cpp  CueReaderMultiplexer.h  EnglishTitleLocalizationHandler.cpp  EnglishTitleLocalizationHandler.h  InteractiveTagger.cpp  InteractiveTagger.h  InteractiveTerminal.h  RenamingFilter.cpp  RenamingFilter.h  SimpleCapitalizationFilter.cpp  SimpleCapitalizationFilter.h  SpanishTitleLocalizationHandler.cpp  SpanishTitleLocalizationHandler.h  StandardConsole.cpp  StandardConsole.h  TitleCapitalizationFilter.cpp  TitleCapitalizationFilter.h  TitleLocalizationHandler.cpp  TitleLocalizationHandler.h  UnixRenamingFilter.h  config.h.in  main.cpp  number_cast.h  validators.h  wide_string_cast.h
tests/: CMakeLists.txt  EnglishTitleCapitalization.cpp  SpanishTitleCapitalization.cpp  TitleCapitalizationBase.cpp  TitleCapitalizationBase.h  english_titles.cpp  spanish_titles.cpp  titles_base.cpp  titles_base.h
tests/data/: english_titles.txt  spanish_titles.txt
